fix mobile screen
mobile screen topbar had include padding 5% << case of not fit others

--- a/public/style/bg_style.css
+++ b/public/style/bg_style.css
@@ -51,12 +51,10 @@
 		z-index : 1;
 		position: absolute;
 		padding-top: 8px;
-		padding-left:5%;
 		top: 0px;
 		width: 100%;
 		height: 60px;
 }
-
 
 .home{
 	cursor: pointer;
@@ -68,7 +66,7 @@
 	background-position: center;
 
 	float :left;
-	margin-left: 8px;
+	margin-left: 20px;
 	width: 50px;
 	height: 50px;
 }
